# ecommerce-store

backend/microservices/auth_services/: .env.example  .gitattributes  .gitignore  .pylintrc  MakeFile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/microservices/auth_services/api/: __init__.py
backend/microservices/auth_services/api/v1/: __init__.py
backend/microservices/auth_services/app/controllers/: auth.py  user.py
backend/microservices/auth_services/app/integrations/: __init__.py  s3_image_manager.py  ses_email.py
backend/microservices/auth_services/app/models/: __init__.py  address.py  user.py  user_security.py
backend/microservices/auth_services/app/repositories/: user.py
backend/microservices/auth_services/core/: config.py  server.py
backend/microservices/auth_services/core/cache/: __init__.py  cache_manager.py  cache_tag.py  custom_key_maker.py  redis_backend.py
backend/microservices/auth_services/core/controller/: base.py
backend/microservices/auth_services/core/database/: __init__.py  session.py
backend/microservices/auth_services/core/exceptions/: __init__.py
backend/microservices/auth_services/core/factory/: factory.py
backend/microservices/auth_services/core/repository/: base.py
backend/microservices/auth_services/core/security/: __init__.py  jwt_handler.py  password.py
backend/microservices/auth_services/core/utils/: __init__.py  custom_api_response.py
backend/microservices/auth_services/migrations/: env.py
backend/microservices/auth_services/worker/: __init__.py
(+36 files in other folders)
